Refactor navbar and user profile menu for improved responsiveness and styling

--- a/BloggoFrontend/pages/admin-action.html
+++ b/BloggoFrontend/pages/admin-action.html
@@ -18,7 +18,7 @@
 
 <!-- 🚫 DO NOT CHANGE NAVBAR -->
 <header class="sticky-top">
-    <nav class="glass-navbar align-items-center">
+    <nav class="glass-navbar navbar navbar-expand-lg navbar-light px-4 py-2 shadow-sm">
         <h1 class="navbar-brand" href="#" aria-label="Bloggo Home">BLOGGO</h1>
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -29,6 +29,7 @@
 
         <div class="d-flex align-items-center">
             <div class="text-black me-3">Welcome, Admin</div>
+
             <div class="dropdown profile-menu">
                 <a href="#" class="d-block" id="profileDropdown" data-bs-toggle="dropdown" aria-expanded="false">
                     <img src="../assets/boy%20(1).png" class="avatar" alt="Profile Avatar">
@@ -45,17 +46,17 @@
     </nav>
 </header>
 
-<div class="container">
+<div class=" ">
     <div class="row">
         <!-- 📌 Sidebar -->
-        <aside class="col-lg-2 col-md-6 sidebar">
+        <aside class="col-lg-1 col-md-2 pt-8 sidebar">
             <a href="admin-action.html" class="active"><i class="fas fa-tachometer-alt me-2"></i> Dashboard</a>
             <a href="user-management.html"><i class="fas fa-users me-2"></i> Manage Users</a>
             <a href="post-management.html"><i class="fas fa-blog me-2"></i> Manage Posts</a>
         </aside>
 
         <!-- 📌 Main Content -->
-        <main class="col-lg-10 col-md-6 mt-8">
+        <main class="col-lg-10 col-md-6 mt-4">
             <h2 class="mb-4">Admin Dashboard</h2>
 
             <!-- Stats -->
