--- a/BloggoFrontend/pages/post-management.html
+++ b/BloggoFrontend/pages/post-management.html
@@ -60,7 +60,7 @@
     </nav>
 </header>
 
-<div class="container">
+<div class="">
     <div class="row">
         <aside class="col-lg-2 col-md-6 sidebar">
             <a href="admin-action.html" ><i class="fas fa-tachometer-alt me-2"></i> Dashboard</a>
@@ -68,7 +68,7 @@
             <a href="post-management.html" class="active"><i class="fas fa-blog me-2"></i> Manage Posts</a>
         </aside>
 
-        <main  class="col-lg-10 col-md-6 mt-8">
+        <main  class="col-lg-10 col-md-6 mt-4">
             <h2 class="mb-4">Post Management</h2>
 
             <div class="card shadow-sm mt-4">
