--- a/BloggoFrontend/pages/user-management.html
+++ b/BloggoFrontend/pages/user-management.html
@@ -39,7 +39,7 @@
   </nav>
 </header>
 
-<div class="container">
+<div class="">
   <div class="row">
     <aside class="col-lg-2 sidebar">
       <a href="admin-action.html"><i class="fas fa-tachometer-alt me-2"></i> Dashboard</a>
@@ -48,7 +48,7 @@
     </aside>
 
     <!-- Main Content -->
-    <main class="col-lg-10">
+    <main class="col-lg-10 mt-4">
       <div class="d-flex justify-content-between align-items-center mb-3">
         <h2>User Management</h2>
       </div>
