--- a/BloggoFrontend/pages/saved-bookmarks.html
+++ b/BloggoFrontend/pages/saved-bookmarks.html
@@ -14,55 +14,63 @@
 </head>
 <body>
 <header class="sticky-top">
-    <nav class="glass-navbar align-items-center">
+    <nav class="glass-navbar navbar navbar-expand-lg navbar-light px-4 py-2 shadow-sm">
         <h1 class="navbar-brand" href="#" aria-label="Bloggo Home">BLOGGO</h1>
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
 
-        <a href="dashboard.html"><i class="fas fa-home me-1"></i> Home</a>
-        <a href="notification.html"><i class="fas fa-bell me-1"></i> Notifications</a>
-        <a href="blog-editor.html"><i class="fas fa-pen me-1"></i> Write</a>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <!-- Navigation Links -->
+            <div class="nav-container">
+                <ul class="nav-menu">
+                    <li class="nav-item"><a href="dashboard.html"><i class="fas fa-home me-1"></i> Home</a></li>
+                    <li class="nav-item"><a href="notification.html"><i class="fas fa-bell me-1"></i> Notifications</a></li>
+                    <li class="nav-item"><a href="blog-editor.html"><i class="fas fa-pen me-1"></i> Write</a></li>
+                </ul>
+            </div>
 
-
-        <!-- User Profile Menu -->
-        <div class="dropdown profile-menu">
-            <a href="#" class="d-block" id="profileDropdown" data-bs-toggle="dropdown" aria-expanded="false">
-                <img src="../assets/boy%20(1).png" class="avatar" alt="Profile Avatar">
-            </a>
-            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="profileDropdown">
-                <li>
-                    <a class="dropdown-item" href="stories.html">
-                        <i class="fas fa-user me-2"></i> Profile
-                    </a>
-                </li>
-                <li>
-                    <a class="dropdown-item" href="saved-bookmarks.html">
-                        <i class="fas fa-bookmark me-2"></i> My Library
-                    </a>
-                </li>
-                <li>
-                    <a class="dropdown-item" href="membership.html">
-                        <i class="fas fa-star me-2"></i> Become a Member
-                    </a>
-                </li>
-                <li>
-                    <a class="dropdown-item" href="settings.html">
-                        <i class="fas fa-cog me-2"></i> Settings
-                    </a>
-                </li>
-                <li><hr class="dropdown-divider"></li>
-                <li>
-                    <a class="dropdown-item text-danger" href="logout.html" onclick="logout()">
-                        <i class="fas fa-sign-out-alt me-2"></i> Logout
-                    </a>
-                </li>
-            </ul>
-
+            <!-- User Profile Menu -->
+            <div class="dropdown profile-menu">
+                <a href="#" class="d-block" id="profileDropdown" data-bs-toggle="dropdown" aria-expanded="false">
+                    <img src="../assets/boy%20(1).png" class="avatar" alt="Profile Avatar">
+                </a>
+                <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="profileDropdown">
+                    <li>
+                        <a class="dropdown-item" href="stories.html">
+                            <i class="fas fa-user me-2"></i> Profile
+                        </a>
+                    </li>
+                    <li>
+                        <a class="dropdown-item" href="saved-bookmarks.html">
+                            <i class="fas fa-bookmark me-2"></i> My Library
+                        </a>
+                    </li>
+                    <li>
+                        <a class="dropdown-item" href="membership.html">
+                            <i class="fas fa-star me-2"></i> Become a Member
+                        </a>
+                    </li>
+                    <li>
+                        <a class="dropdown-item" href="settings.html">
+                            <i class="fas fa-cog me-2"></i> Settings
+                        </a>
+                    </li>
+                    <li><hr class="dropdown-divider"></li>
+                    <li>
+                        <a class="dropdown-item text-danger" href="logout.html" onclick="logout()">
+                            <i class="fas fa-sign-out-alt me-2"></i> Logout
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
+
+
     </nav>
 </header>
+
 
 <div class="container mt-3">
     <div class="row mt-3">
