--- a/BloggoFrontend/pages/blog-editor.html
+++ b/BloggoFrontend/pages/blog-editor.html
@@ -29,6 +29,7 @@
                 <ul class="nav-menu">
                     <li class="nav-item"><a href="dashboard.html"><i class="fas fa-home me-1"></i> Home</a></li>
                     <li class="nav-item"><a href="notification.html"><i class="fas fa-bell me-1"></i> Notifications</a></li>
+                    <li class="nav-item"><a href="stories.html"><i class="fas fa-user"></i> My Profile</a></li>
                     <li class="nav-item"><a href="blog-editor.html"><i class="fas fa-pen me-1"></i> Write</a></li>
                 </ul>
             </div>
