Add unread notifications feature and enhance notification UI

--- a/BloggoFrontend/pages/dashboard.html
+++ b/BloggoFrontend/pages/dashboard.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
 
+
+
     <!-- Custom CSS -->
     <link href="../css/dashboard.css" rel="stylesheet">
 </head>
@@ -74,6 +76,7 @@
 
     </nav>
 </header>
+<div id="top-alert" class="top-alert d-none"></div>
 
 
 <section class="search-section mb-8 sticky-top pt-1 bg-white" style="z-index: 1000;">
