Refactor styles and improve UI consistency across various components

--- a/BloggoFrontend/pages/members-profile.html
+++ b/BloggoFrontend/pages/members-profile.html
@@ -95,7 +95,7 @@
         </div>
 
         <p>
-          <a href="follow.html" class="text-decoration-none fw-semibold">71 Followers</a>
+          <a href="follow.html" class="text-decoration-none fw-semibold" id="followersCount">71 Followers</a>
         </p>
 
         <p class="profile-bio">
@@ -104,7 +104,8 @@
 
         <a class="btn btn-secondary btn-sm w-100 mt-2 followBtn"
            style="background: black; color: white"
-           data-user-id="123">Follow</a>
+           data-user-id="123"
+            id="followBtn">Follow</a>
 
 
       </div>
