--- a/BloggoFrontend/index.html
+++ b/BloggoFrontend/index.html
@@ -16,450 +16,34 @@
 
     <style>
         :root {
-            --primary-color: #2D3748;
-            --secondary-color: #4A5568;
-            --accent-color: #667EEA;
-            --accent-light: #764BA2;
-            --text-primary: #1A202C;
-            --text-secondary: #4A5568;
-            --text-muted: #718096;
-            --bg-white: #FFFFFF;
-            --bg-light: #F8FAFC;
-            --bg-section: #FEFEFE;
-            --border-color: #E2E8F0;
-            --shadow-sm: 0 2px 4px rgba(0,0,0,0.04);
-            --shadow-md: 0 8px 25px rgba(0,0,0,0.08);
-            --shadow-lg: 0 20px 40px rgba(0,0,0,0.1);
-            --gradient-primary: linear-gradient(135deg, #667EEA 0%, #764BA2 100%);
-            --gradient-secondary: linear-gradient(135deg, #f093fb 0%, #f5576c 100%);
-            --gradient-soft: linear-gradient(135deg, #667eea22 0%, #764ba233 100%);
+            /* Colors */
+            --primary: #000000;           /* Black */
+            --primary-hover: #222222;     /* Dark Gray on hover */
+            --muted: #6b7280;             /* Gray for secondary text */
+            --light: #f8f8f8;             /* Light gray background */
+            --dark: #1f2937;              /* Dark gray text */
+            --border: #e5e5e5;            /* Light border */
+            --shadow: 0 10px 30px rgba(0,0,0,0.08);
+            --radius: 16px;
+            --white: #ffffff;
         }
 
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
+        /* Body */
         body {
             font-family: 'Inter', sans-serif;
-            line-height: 1.7;
-            color: var(--text-primary);
-            background: var(--bg-white);
-            overflow-x: hidden;
-        }
-
-        /* Typography */
-        .display-4 {
-            font-family: 'Playfair Display', serif;
-            font-weight: 600;
-            line-height: 1.2;
-            background: var(--gradient-primary);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            background-clip: text;
-        }
-
-        .lead {
-            font-family: 'Crimson Text', serif;
-            font-size: 1.1rem;
-            color: var(--text-secondary);
-            font-weight: 400;
-        }
-
-        h2.h2 {
-            font-family: 'Playfair Display', serif;
-            color: var(--text-primary);
-            position: relative;
-            margin-bottom: 3rem;
-        }
-
-        h2.h2::after {
-            content: '';
-            position: absolute;
-            bottom: -10px;
-            left: 0;
-            width: 60px;
-            height: 3px;
-            background: var(--gradient-primary);
-            border-radius: 2px;
+            color: var(--dark);
+            line-height: 1.6;
+            background: var(--white);
+            min-height: 100vh;
+            display: flex;
+            flex-direction: column;
         }
 
         /* Header */
         header {
-            background: rgba(255, 255, 255, 0.95);
-            backdrop-filter: blur(20px);
-            border-bottom: 1px solid var(--border-color);
-            transition: all 0.3s ease;
-        }
-
-        .navbar-brand img.brand-logo {
-            height: 40px;
-            transition: transform 0.3s ease;
-        }
-
-        .navbar-brand:hover img.brand-logo {
-            transform: scale(1.05);
-        }
-
-        .nav-link {
-            font-weight: 500;
-            color: var(--text-secondary) !important;
-            transition: all 0.3s ease;
-            position: relative;
-        }
-
-        .nav-link:hover {
-            color: var(--accent-color) !important;
-        }
-
-        .nav-link::after {
-            content: '';
-            position: absolute;
-            width: 0;
-            height: 2px;
-            bottom: -5px;
-            left: 50%;
-            background: var(--gradient-primary);
-            transition: all 0.3s ease;
-            transform: translateX(-50%);
-        }
-
-        .nav-link:hover::after {
-            width: 100%;
-        }
-
-        .btn {
-            font-weight: 500;
-            border-radius: 12px;
-            padding: 12px 28px;
-            transition: all 0.3s ease;
-            border: none;
-            position: relative;
-            overflow: hidden;
-        }
-
-        .btn-primary {
-            background: var(--gradient-primary);
-            color: white;
-            box-shadow: var(--shadow-sm);
-        }
-
-        .btn-primary:hover {
-            transform: translateY(-2px);
-            box-shadow: var(--shadow-md);
-            background: var(--gradient-primary);
-            color: white;
-        }
-
-        .btn-outline-secondary {
-            border: 2px solid var(--border-color);
-            color: var(--text-secondary);
-            background: transparent;
-        }
-
-        .btn-outline-secondary:hover {
-            background: var(--primary-color);
-            color: white;
-            transform: translateY(-2px);
-            box-shadow: var(--shadow-md);
-        }
-
-        /* Hero Section */
-        .hero {
-            padding: 80px 0;
-            background: linear-gradient(135deg, rgba(102, 126, 234, 0.03) 0%, rgba(118, 75, 162, 0.05) 100%);
-            position: relative;
-        }
-
-        .hero::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background: url("data:image/svg+xml,%3Csvg width='60' height='60' viewBox='0 0 60 60' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cg fill='%23667eea' fill-opacity='0.02'%3E%3Ccircle cx='30' cy='30' r='4'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E") repeat;
-            opacity: 0.5;
-        }
-
-        .hero-card {
-            background: rgba(255, 255, 255, 0.8);
-            backdrop-filter: blur(10px);
-            border: 1px solid rgba(102, 126, 234, 0.1);
-            border-radius: 16px;
-            padding: 20px 24px;
-            box-shadow: var(--shadow-sm);
-            position: relative;
-            z-index: 2;
-        }
-
-        .hero-card svg {
-            color: var(--accent-color);
-        }
-
-        .hero-image {
-            position: relative;
-            z-index: 2;
-        }
-
-        .hero-image img {
-            border-radius: 20px;
-            box-shadow: var(--shadow-lg);
-            transition: transform 0.3s ease;
-        }
-
-        .hero-image:hover img {
-            transform: scale(1.02);
-        }
-
-        .hero-cta {
-            margin: 2rem 0;
-        }
-
-        .btn-lg {
-            padding: 16px 32px;
-            font-size: 1.1rem;
-            border-radius: 14px;
-        }
-
-        /* OAuth Buttons */
-        .auth-quick {
-            margin-top: 2rem;
-        }
-
-        .oauth-btn {
-            width: 48px;
-            height: 48px;
-            border-radius: 12px;
-            border: 2px solid var(--border-color);
-            background: white;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            transition: all 0.3s ease;
-            cursor: pointer;
-        }
-
-        .oauth-btn:hover {
-            transform: translateY(-2px);
-            box-shadow: var(--shadow-md);
-            border-color: var(--accent-color);
-        }
-
-        .oauth-btn img {
-            width: 20px;
-            height: 20px;
-        }
-
-        /* Carousel Section */
-        .section {
-            padding: 80px 0;
-            position: relative;
-        }
-
-        .carousel-item img {
-            height: 400px;
-            object-fit: cover;
-            border-radius: 20px;
-        }
-
-        .carousel-caption {
-            background: linear-gradient(transparent, rgba(0,0,0,0.8));
-            border-radius: 0 0 20px 20px;
-            padding: 40px 30px 30px;
-            bottom: 0;
-            left: 0;
-            right: 0;
-        }
-
-        .carousel-caption h3 {
-            font-family: 'Playfair Display', serif;
-            font-size: 1.8rem;
-            font-weight: 600;
-            margin-bottom: 10px;
-        }
-
-        .carousel-control-prev,
-        .carousel-control-next {
-            width: 50px;
-            height: 50px;
-            background: rgba(255, 255, 255, 0.9);
-            border-radius: 50%;
-            top: 50%;
-            transform: translateY(-50%);
-            opacity: 0.8;
-            transition: all 0.3s ease;
-        }
-
-        .carousel-control-prev {
-            left: 20px;
-        }
-
-        .carousel-control-next {
-            right: 20px;
-        }
-
-        .carousel-control-prev:hover,
-        .carousel-control-next:hover {
-            opacity: 1;
-            background: white;
-            box-shadow: var(--shadow-md);
-        }
-
-        /* Categories Section */
-        .cat-card {
-            border-radius: 20px;
-            overflow: hidden;
-            background: white;
-            box-shadow: var(--shadow-sm);
-            transition: all 0.3s ease;
-            border: 1px solid var(--border-color);
-            position: relative;
-        }
-
-        .cat-card:hover {
-            transform: translateY(-8px);
-            box-shadow: var(--shadow-lg);
-        }
-
-        .cat-card::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background: var(--gradient-soft);
-            opacity: 0;
-            transition: opacity 0.3s ease;
-        }
-
-        .cat-card:hover::before {
-            opacity: 1;
-        }
-
-        .cat-thumb {
-            height: 200px;
-            overflow: hidden;
-            position: relative;
-        }
-
-        .cat-thumb img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            transition: transform 0.3s ease;
-        }
-
-        .cat-card:hover .cat-thumb img {
-            transform: scale(1.1);
-        }
-
-        .cat-body {
-            position: relative;
-            z-index: 2;
-            background: white;
-        }
-
-        .badge {
-            font-weight: 500;
-            padding: 8px 16px;
-            border-radius: 20px;
-            font-size: 0.85rem;
-        }
-
-        .bg-primary { background: var(--gradient-primary) !important; }
-        .bg-success { background: linear-gradient(135deg, #48bb78, #38a169) !important; }
-        .bg-info { background: linear-gradient(135deg, #4299e1, #3182ce) !important; }
-        .bg-warning { background: linear-gradient(135deg, #ed8936, #dd6b20) !important; }
-        .bg-purple { background: linear-gradient(135deg, #9f7aea, #805ad5) !important; }
-        .bg-dark { background: linear-gradient(135deg, #4a5568, #2d3748) !important; }
-
-        /* Footer */
-        footer {
-            background: linear-gradient(135deg, var(--primary-color), var(--secondary-color));
-            color: white;
-            margin-top: 80px;
-        }
-
-        footer a {
-            color: rgba(255, 255, 255, 0.8);
-            transition: color 0.3s ease;
-        }
-
-        footer a:hover {
-            color: white;
-        }
-
-        /* Animations */
-        @keyframes fadeInUp {
-            from {
-                opacity: 0;
-                transform: translateY(30px);
-            }
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-
-        .hero-card,
-        .cat-card {
-            animation: fadeInUp 0.8s ease forwards;
-        }
-
-        .cat-card:nth-child(1) { animation-delay: 0.1s; }
-        .cat-card:nth-child(2) { animation-delay: 0.2s; }
-        .cat-card:nth-child(3) { animation-delay: 0.3s; }
-        .cat-card:nth-child(4) { animation-delay: 0.4s; }
-        .cat-card:nth-child(5) { animation-delay: 0.5s; }
-        .cat-card:nth-child(6) { animation-delay: 0.6s; }
-
-        /* Responsive */
-        @media (max-width: 768px) {
-            .hero {
-                padding: 60px 0;
-            }
-
-            .display-4 {
-                font-size: 2.5rem;
-            }
-
-            .section {
-                padding: 60px 0;
-            }
-
-            .carousel-caption h3 {
-                font-size: 1.4rem;
-            }
-
-            h2.h2::after {
-                width: 40px;
-            }
-        }
-
-        /* Smooth scrolling */
-        html {
-            scroll-behavior: smooth;
-        }
-
-        /* Custom scrollbar */
-        ::-webkit-scrollbar {
-            width: 8px;
-        }
-
-        ::-webkit-scrollbar-track {
-            background: var(--bg-light);
-        }
-
-        ::-webkit-scrollbar-thumb {
-            background: var(--gradient-primary);
-            border-radius: 4px;
-        }
-
-        ::-webkit-scrollbar-thumb:hover {
-            background: var(--accent-light);
+            background: var(--white);
+            border-bottom: 1px solid var(--border);
+            backdrop-filter: saturate(180%) blur(12px);
         }
 
         .navbar-brand{
@@ -473,6 +57,224 @@
             padding-top: 5px;
             padding-bottom: 5px;
         }
+
+        .brand-logo {
+            height: 40px;
+            width: auto;
+        }
+
+        .navbar-nav .nav-link {
+            font-weight: 500;
+            color: var(--dark);
+            transition: color 0.3s;
+        }
+
+        .navbar-nav .nav-link:hover {
+            color: var(--primary-hover);
+        }
+
+        /* Hero Section */
+        .hero {
+            padding: 3rem 0;
+        }
+
+        .hero-card {
+            background: var(--white);
+            border: 1px solid var(--border);
+            padding: 1rem;
+            border-radius: var(--radius);
+            box-shadow: var(--shadow);
+            max-width: 700px;
+        }
+
+        .display-4 {
+            font-family: 'Lora', serif;
+            font-weight: 700;
+            color: var(--dark);
+        }
+
+        .hero-image img {
+            box-shadow: var(--shadow);
+        }
+
+        /* OAuth Buttons */
+        .oauth-btn {
+            width: 60px;
+            height: 60px;
+            border: 2px solid var(--border);
+            border-radius: 50%;
+            background: var(--white);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 1.2rem;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            padding: 0;
+        }
+
+        .oauth-btn img {
+            width: 28px;
+            height: 28px;
+        }
+
+        .oauth-btn:hover {
+            transform: translateY(-2px);
+            box-shadow: var(--shadow);
+        }
+
+        /* Carousel */
+        .carousel-img {
+            height: 400px;
+            object-fit: cover;
+            filter: grayscale(20%);
+        }
+
+        .carousel-caption {
+            background: rgba(0, 0, 0, 0.6);
+            border-radius: 8px;
+            padding: 1rem;
+            bottom: 2rem;
+            left: 2rem;
+            right: 2rem;
+            color: var(--white);
+        }
+
+        /* Category Cards */
+        .cat-card {
+            background: var(--white);
+            border: 1px solid var(--border);
+            border-radius: var(--radius);
+            overflow: hidden;
+            transition: all 0.3s ease;
+            box-shadow: var(--shadow);
+        }
+
+        .cat-card:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 15px 40px rgba(0,0,0,0.12);
+        }
+
+        .cat-thumb {
+            height: 180px;
+            overflow: hidden;
+        }
+
+        .cat-thumb img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            transition: transform 0.5s ease;
+            filter: grayscale(10%);
+        }
+
+        .cat-card:hover .cat-thumb img {
+            transform: scale(1.05);
+        }
+
+        .cat-body {
+            padding: 1.25rem;
+            color: var(--dark);
+        }
+
+        /* Buttons */
+        .btn {
+            font-weight: 500;
+            border-radius: var(--radius);
+            transition: all 0.3s ease;
+            border: 1px solid var(--border);
+            background: var(--white);
+            color: var(--dark);
+            padding: 10px 24px;
+        }
+
+        .btn:hover {
+            background: var(--primary-hover);
+            color: var(--white);
+            transform: translateY(-2px);
+            box-shadow: var(--shadow);
+        }
+
+        /* Footer */
+        footer {
+            background: var(--primary);
+            margin-top: auto;
+            border-top: 1px solid var(--border);
+            color: var(--white);
+            padding: 1.5rem 0;
+            text-align: center;
+        }
+
+        /* Utilities */
+        .rounded-4 {
+            border-radius: var(--radius);
+        }
+
+        /* Animations */
+        @keyframes fadeIn {
+            from { opacity: 0; transform: translateY(20px); }
+            to { opacity: 1; transform: translateY(0); }
+        }
+
+        .hero, .section {
+            animation: fadeIn 0.8s ease-out;
+        }
+
+        .section:nth-child(2) {
+            animation-delay: 0.2s;
+        }
+
+        .section:nth-child(3) {
+            animation-delay: 0.4s;
+        }
+
+        /* Responsive adjustments */
+        @media (max-width: 768px) {
+            .hero {
+                padding: 2rem 0;
+            }
+
+            .display-4 {
+                font-size: 2.2rem;
+            }
+
+            .carousel-img {
+                height: 300px;
+            }
+
+            .carousel-caption {
+                bottom: 1rem;
+                left: 1rem;
+                right: 1rem;
+                padding: 0.75rem;
+            }
+
+            .carousel-caption h3 {
+                font-size: 1.1rem;
+                margin-bottom: 0.25rem;
+            }
+
+            .carousel-caption p {
+                font-size: 0.9rem;
+                margin-bottom: 0;
+            }
+        }
+
+        @media (max-width: 576px) {
+            .hero-cta {
+                flex-direction: column;
+            }
+
+            .hero-cta .btn {
+                width: 100%;
+                margin-bottom: 0.5rem;
+            }
+
+            .cat-thumb {
+                height: 150px;
+            }
+        }
+
     </style>
 </head>
 <body>
