--- a/BloggoFrontend/pages/logout.html
+++ b/BloggoFrontend/pages/logout.html
@@ -14,10 +14,14 @@
 <body>
 
 <div class="logout-card">
-    <h2>👋 See You Soon!</h2>
-    <p>You have successfully logged out from Bloggo. Thank you for visiting!</p>
-    <a href="signing.html" class="btn-login">Go to Login</a>
+    <h2><i class="fa-solid fa-door-open"></i> See You Soon!</h2>
+    <p>You have successfully logged out from <strong>Bloggo</strong>.
+        Thank you for visiting!</p>
+    <a href="signing.html" class="btn-login">
+        <i class="fa-solid fa-right-to-bracket"></i> Go to Login
+    </a>
 </div>
+
 
 <script>
     document.addEventListener("DOMContentLoaded", () => {
