Implement password change functionality and enhance settings UI

--- a/BloggoFrontend/pages/dashboard.html
+++ b/BloggoFrontend/pages/dashboard.html
@@ -109,7 +109,7 @@
     <!-- Sidebar -->
     <aside class="sidebar fixed-top pt-5">
         <a href="dashboard.html"><i class="fas fa-home"></i> Home</a>
-        <a href="profile.html"><i class="fas fa-pen"></i> My Blogs</a>
+        <a href="stories.html"><i class="fas fa-pen"></i> My Blogs</a>
         <a href="saved-bookmarks.html"><i class="fas fa-bookmark"></i> Saved</a>
         <a href="about-bloggo.html"><i class="fas fa-globe"></i> Explore</a>
         <a href="notification.html"><i class="fas fa-bell"></i> Notifications</a>
