Add token validation for password reset and improve reset link handling

--- a/BloggoFrontend/pages/reset-password.html
+++ b/BloggoFrontend/pages/reset-password.html
@@ -56,24 +56,28 @@
 <button id="resetBtn">Reset Password</button>
 <p id="message"></p>
 
+
 <script>
-    const urlParams = new URLSearchParams(window.location.search);
-    const token = urlParams.get('token');
     const btn = document.getElementById('resetBtn');
     const message = document.getElementById('message');
 
-    if(!token) {
-        message.innerText = "Invalid reset link.";
-        message.className = "error";
-        btn.disabled = true;
-    }
+    // ✅ Get the token from the URL
+    const params = new URLSearchParams(window.location.search);
+    const token = params.get("token");
+    console.log("Reset token:", token);
 
     btn.addEventListener('click', async () => {
         const newPassword = document.getElementById('newPassword').value;
         const confirmPassword = document.getElementById('confirmPassword').value;
 
-        if(newPassword !== confirmPassword){
+        if (newPassword !== confirmPassword) {
             message.innerText = "Passwords do not match.";
+            message.className = "error";
+            return;
+        }
+
+        if (!token) {
+            message.innerText = "Invalid or missing reset token.";
             message.className = "error";
             return;
         }
@@ -82,32 +86,34 @@
         btn.innerText = "Resetting...";
 
         try {
+            // ✅ Send the token in the POST body
             const res = await fetch('http://localhost:8080/auth/reset-password', {
                 method: 'POST',
                 headers: { 'Content-Type': 'application/json' },
-                body: JSON.stringify({ token, newPassword })
+                body: JSON.stringify({ newPassword, token })
             });
 
             const msg = await res.text();
 
-            if(res.ok){
+            if (res.ok) {
                 message.innerText = msg;
-                message.className = "success";
+                message.className = 'success';
                 setTimeout(() => window.location.href = 'login.html', 2500);
             } else {
                 message.innerText = msg;
-                message.className = "error";
+                message.className = 'error';
                 btn.disabled = false;
-                btn.innerText = "Reset Password";
+                btn.innerText = 'Reset Password';
             }
 
-        } catch(err) {
-            message.innerText = "Error resetting password.";
-            message.className = "error";
+        } catch (err) {
+            message.innerText = 'Error resetting password.';
+            message.className = 'error';
             btn.disabled = false;
-            btn.innerText = "Reset Password";
+            btn.innerText = 'Reset Password';
         }
     });
 </script>
+
 </body>
 </html>
