--- a/BloggoFrontend/pages/stories.html
+++ b/BloggoFrontend/pages/stories.html
@@ -112,8 +112,7 @@
                     Just a 21+ girl navigating life with passion and purpose! ✨
                 </p>
 
-               <!-- &lt;!&ndash; Wallet & Earnings Inline &ndash;&gt;
-                <div class="d-flex gap-3 mb-3">
+                <!--<div class="d-flex gap-3 mb-3">
                     <div class="wallet flex-fill p-3 bg-light rounded d-flex align-items-center justify-content-between">
                         <div>
                             <h6 class="mb-1"><i class="fas fa-wallet me-2 text-primary"></i> Wallet</h6>
