Refactor member profile and notification pages; remove personal details and add notification tabs

--- a/BloggoFrontend/pages/members.html
+++ b/BloggoFrontend/pages/members.html
@@ -78,8 +78,13 @@
 
             <!-- Tab Content -->
             <div class="tab-content mt-3" id="MembersTabsContent">
+                <!-- Notification Tabs -->
+                <ul class="nav nav-tabs" id="notificationTabs" role="tablist">
+                    <li class="nav-item" role="presentation"></li>
+                    <li class="nav-item" role="presentation"></li>
+                    <li class="nav-item" role="presentation"></li>
+                </ul>
                 <div id="all"></div>
-
             </div>
         </div>
 
@@ -90,16 +95,15 @@
                 <img  class="profile-avatar mb-2" alt="Avatar">
 
                 <div class="d-flex align-items-center justify-content-center gap-2 mb-2">
-                    <h4 class="profile-name m-0">Sasuniwijerathne</h4>
-                    <small class="text-muted">she/her</small>
+                    <h4 class="profile-name m-0"></h4>
+                    <small class="text-muted"></small>
                 </div>
 
                 <p>
-                    <a href="follow.html" class="text-decoration-none fw-semibold">71 Followers</a>
+                    <a href="follow.html" class="text-decoration-none fw-semibold"> </a>
                 </p>
 
                 <p class="profile-bio">
-                    Just a 21+ girl navigating life with passion and purpose! ✨
                 </p>
 
                 <a href="settings.html" class="btn btn-secondary btn-sm w-100 mt-2" style="background: black; color: white">Edit profile</a>
