--- a/BloggoFrontend/pages/notification.html
+++ b/BloggoFrontend/pages/notification.html
@@ -77,11 +77,17 @@
         <div class="col-lg-8">
             <h2 class="mb-4">Notification</h2>
 
+            <!-- Notification Tabs -->
+            <ul class="nav nav-tabs" id="notificationTabs" role="tablist">
+                <li class="nav-item" role="presentation"></li>
+                <li class="nav-item" role="presentation"></li>
+                <li class="nav-item" role="presentation"></li>
+            </ul>
+
             <!-- Tab Content -->
             <div class="tab-content mt-3" id="notificationTabsContent">
                 <!-- All Tab -->
                 <div class="tab-pane fade show active" id="all" role="tabpanel"></div>
-
             </div>
         </div>
 
@@ -92,16 +98,15 @@
                 <img  class="profile-avatar mb-2" alt="Avatar">
 
                 <div class="d-flex align-items-center justify-content-center gap-2 mb-2">
-                    <h4 class="profile-name m-0">Sasuniwijerathne</h4>
-                    <small class="text-muted">she/her</small>
+                    <h4 class="profile-name m-0"></h4>
+                    <small class="text-muted"></small>
                 </div>
 
                 <p>
-                    <a href="follow.html" class="text-decoration-none fw-semibold">71 Followers</a>
+                    <a href="follow.html" class="text-decoration-none fw-semibold"> </a>
                 </p>
 
                 <p class="profile-bio">
-                    Just a 21+ girl navigating life with passion and purpose! ✨
                 </p>
 
                 <!--&lt;!&ndash; Wallet & Earnings Inline &ndash;&gt;
