--- a/BloggoFrontend/pages/members-profile.html
+++ b/BloggoFrontend/pages/members-profile.html
@@ -90,16 +90,15 @@
         <img  class="profile-avatar mb-2" alt="Avatar">
 
         <div class="d-flex align-items-center justify-content-center gap-2 mb-2">
-          <h4 class="profile-name m-0">Sasuniwijerathne</h4>
-          <small class="text-muted">she/her</small>
+          <h4 class="profile-name m-0"></h4>
+          <small class="text-muted"></small>
         </div>
 
         <p>
-          <a href="follow.html" class="text-decoration-none fw-semibold" id="followersCount">71 Followers</a>
+          <a href="follow.html" class="text-decoration-none fw-semibold" id="followersCount"> </a>
         </p>
 
         <p class="profile-bio">
-          Just a 21+ girl navigating life with passion and purpose! ✨
         </p>
 
         <a class="btn btn-secondary btn-sm w-100 mt-2 followBtn"
