--- a/BloggoFrontend/pages/stories.html
+++ b/BloggoFrontend/pages/stories.html
@@ -84,12 +84,7 @@
             <h2 class="mb-4">My Stories</h2>
 
             <!-- Tab Content -->
-            <div class="nav nav-tabs" id="myStories">
-                <!--<div class="tab-pane fade show active" id="draft" role="tabpanel"></div>
-                <div class="tab-pane fade" id="published" role="tabpanel"></div>
-                <div class="tab-pane fade" id="archived" role="tabpanel"></div>
-                <div class="tab-pane fade" id="scheduled" role="tabpanel"></div>-->
-            </div>
+            <div class="nav nav-tabs" id="myStories"></div>
         </div>
 
 
@@ -100,16 +95,15 @@
                 <img  class="profile-avatar mb-2" alt="Avatar">
 
                 <div class="d-flex align-items-center justify-content-center gap-2 mb-2">
-                    <h4 class="profile-name m-0">Sasuniwijerathne</h4>
-                    <small class="text-muted">she/her</small>
+                    <h4 class="profile-name m-0"></h4>
+                    <small class="text-muted"></small>
                 </div>
 
                 <p>
-                    <a href="follow.html" class="text-decoration-none fw-semibold">71 Followers</a>
+                    <a href="follow.html" class="text-decoration-none fw-semibold"> </a>
                 </p>
 
                 <p class="profile-bio">
-                    Just a 21+ girl navigating life with passion and purpose! ✨
                 </p>
 
                 <!--<div class="d-flex gap-3 mb-3">
