Added FollowDTO and follow functionalities.

--- a/BloggoFrontend/pages/follow.html
+++ b/BloggoFrontend/pages/follow.html
@@ -160,9 +160,8 @@
 
             </div>
 
-            <!-- Following List -->
             <div class="card p-3 mb-3">
-                <h6 class="mb-3">Following</h6>
+                <!--<h6 class="mb-3">Following</h6>
                 <ul class="list-unstyled following-list mb-0">
                     <li class="d-flex align-items-center mb-2">
                         <img  class="rounded-circle me-2" alt="">
@@ -179,7 +178,7 @@
                     <li>
                         <a href="follow.html" class="text-decoration-none">See all (12)</a>
                     </li>
-                </ul>
+                </ul>-->
             </div>
         </div>
     </div>
