Added PDF download functionality to blog post detail page.

--- a/BloggoFrontend/pages/story-detail.html
+++ b/BloggoFrontend/pages/story-detail.html
@@ -98,6 +98,11 @@
                         <div class="story-stats">
                             <div class="stat"><i class="far fa-clock"></i> <span id="readingTime">5 min</span> read</div>
                             <div class="stat"><i class="far fa-calendar"></i> <span id="publishDate">Aug 24, 2025</span></div>
+
+                            <button id="downloadPdfBtn" class="action-btn download-btn">
+                                <i class="fas fa-file-pdf"></i> Download PDF
+                            </button>
+
                         </div>
                     </div>
                 </div>
