Updates application.log, story-detail.html, and story-details.js to implement text-to-speech functionality.

--- a/BloggoFrontend/pages/story-detail.html
+++ b/BloggoFrontend/pages/story-detail.html
@@ -103,6 +103,9 @@
                                 <i class="fas fa-file-pdf"></i> Download PDF
                             </button>
 
+                            <button id="listen-btn">🔊 Listen to this post</button>
+
+
                         </div>
                     </div>
                 </div>
