Added Google authentication, dashboard redirection, and voice generation webhook.

--- a/BloggoFrontend/pages/story-detail.html
+++ b/BloggoFrontend/pages/story-detail.html
@@ -115,7 +115,7 @@
                     <p>Loading story content...</p>
                 </div>
 
-                <button onclick="generateSummary()">Generate Summary</button>
+                <button onclick="generateSummary()" id="generate">Generate Summary</button>
 
                 <div id="summary">
                     <h3>Auto Summary</h3>
